absctracted images that were embedded in js to .txt files

--- a/geekfaq.html
+++ b/geekfaq.html
@@ -21,7 +21,7 @@ Yes, inlining the resources does mean that the browser doesn't download any reso
 It obtains the nearest location using the <a href="http://dev.w3.org/geo/api/spec-source.html">HTML5 Geolocation API</a>, then uses this to obtain a list of the nearest stops via <a href="http://code.google.com/p/onebusaway/wiki/OneBusAwayRestApi">OneBusAwayAPI</a>.
 
 <h4>What development environment have you used?</h4>
-I have utilized GNU Emacs 22.3.1, and Safari 5.0's Web Inspector.  I've not used the <a href="http://xkcd.com/378/">C-x M-c M-butterfly command</a>, but I intend to utilize this in the version 42.42 of metro mobile.
+I have utilized GNU Emacs 22.3.1, Bazaar, and Safari 5.0's Web Inspector.  I've not used the <a href="http://xkcd.com/378/">C-x M-c M-butterfly command</a>, but I intend to utilize this in the version 42.42 of metro mobile.
 
 <h4>Where do I find the uncompressed version of metro mobile?</h4>
 The uncompressed version is provided at <a href="http://www.inmff.net/mm/">http://www.inmff.net/mm/</a>, additionally a version before the files have been combined via server side includes is available at <a href="http://www.inmff.net/mm/nossi">http://www.inmff.net/mm/nossi</a>.
