--- a/locerror.html
+++ b/locerror.html
@@ -36,6 +36,7 @@ Please select the location request for which you would like to submit a location
 <div id="idLocAttemptReport" class="CSPrefMain">
 <div class="CsMainHeader"><img alt="Bus Logo" src="<!--#include virtual="logo-data.txt" -->" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;" />metro mobile: location report</div>
 <div class="CsMainBody">
+<div class="CsRightLink"><a href="index.html">main</a></div>
 <br />
 <form method="post" action="http://metromobile.info/cgi-bin/FormMail.pl" name="idLocAttemptReportForm">
 <input name="recipient" value="mmwebform@nickb.users.panix.com" type="hidden" />
@@ -61,6 +62,8 @@ device manufacturer: <input name="devicemanuf" /><br />
 <textarea id="text" name="content" rows="8" cols="60"></textarea> <br />
 <input type="submit" value="send location error report" />
 </form>
+<div class="CsRightLink"><a href="index.html">main</a></div>
+<br />
 <hr /><div class="CsCopyrightFooter"><a href="cr.html">copyright 2010</a> nicholas barnard</div>
 </div>
 </div>
