--- a/abt.html
+++ b/abt.html
@@ -20,8 +20,8 @@ metro mobile is a mobile-optimized front end to <a href="http://metro.kingcounty
 <h4>Who wrote metro mobile?</h4>
 metro mobile was written by <a href="http://www.inmff.net">Nicholas Barnard</a>.  The logo was designed by <a href="http://www.adonisphotos.com">Brad Kevelin</a>.  Testing, feedback, and a multitude of support was provided by Benjamin Schwartz, Brad Kevelin, Ian Jaffe, and Lisa Templeton.
 
-<h4>My phone has a built in transit directions using Google Maps.  Why did you bother with metro mobile?</h4>
-Many people have found the transit directions as provided by Google Maps just don't make sense in the real world, and it produces directions that an actual transit rider wouldn't consider an acceptable itinerary.
+<h4>My phone has built in transit directions using Google Maps.  Why did you bother with metro mobile?</h4>
+Many people have found the transit directions as provided by Google Maps just don't make sense in the real world, and it produces directions that an actual transit rider wouldn't consider as an acceptable itinerary.
 
 <h4>How much does metro mobile cost?</h4>
 metro mobile is free, although donations are accepted via <a href="javascript:document.nmPayPal.submit();">PayPal</a>.  If you find metro mobile useful, please consider a donation.  Significant time, as well as hosting costs, and many many extra pots of tea and coffee beverages at cafes around the area have been invested into its development.
@@ -43,6 +43,9 @@ All data is stored on cookies on your phone or computer, and is not stored by th
 
 <h4>metro mobile said I was somewhere where I wasn't, what happened?</h4>
 The process involved with identifying the specific location of a phone or computer on the planet is complex.  If you believe the wrong location was returned, please go to additional options and set "save location debug info" to "yes", and retry your request.  After repeating your request, please submit a <a href="locationerror.html">location error report</a>. 
+
+<h4>How do I tell all my friends about metro mobile?</h4>
+There are many ways, you can email them a link to http://metromobile.info, tweet them with <a href="http://twitter.com/metro_mobile">@metro_mobile</a>, or suggest it to them on <a href="http://www.facebook.com/pages/Introducing-metro-mobile/109707232429391">Facebook</a>.  Oh, and you can also just tell them about it in person, "metro mobile dot info" its quick and easy to say!
 
 <h4>How have you made metro mobile load quickly? (Or I'm a geek and want to know about all the design decisions!)</h4>
 There were many design and configuration decisions that went into optimizing metro mobile, learn about them in the <a href="geekfaq.html">geek's FAQ</a>.
