--- a/contact.html
+++ b/contact.html
@@ -17,19 +17,23 @@ function checkreturn() {
 <div class="CsMainHeader"><img alt="Bus Logo" src="<!--#include virtual="logo-data.txt" -->" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;" />metro mobile: contact</div>
 <div class="CsMainBody">
 <br />
+<div class="CsRightLink"><a href="index.html">main</a></div>
+
 <form method="post" action="/cgi-bin/FormMail.pl" name="Contact" onsubmit="return checkreturn();">
-<label for="name">Name:</label> <input id="name" name="realname" /><br /> 
-<label for="email">E-Mail Address:</label> <input id="email" name="email" /><br />
-<label for="subject">Subject:</label> <input id="subject" name="subject" /><br />
+<label for="name">name:</label> <input id="name" name="realname" /><br /> 
+<label for="email">e-mail:</label> <input id="email" name="email" /><br />
+<label for="subject">subject:</label> <input id="subject" name="subject" /><br />
 <input name="recipient" value="mmwebform@nickb.users.panix.com" type="hidden" />
 <input name="redirect" value="/mailrecv.html" type="hidden" />
 <input name="required" value="email" type="hidden" />
 <input name="env_report" value="REMOTE_HOST,HTTP_USER_AGENT,REMOTE_ADDR" type="hidden" />
 <input name="missing_fields_redirect" value="/mailmissing.html" type="hidden" />
-<label for="text">Text:</label><br />
+<label for="text">message:</label><br />
 <textarea id="text" name="content" rows="10" cols="60"></textarea> <br />
-<input type="submit" value="Send Message" /> <input type="reset" value="Clear form" />
+<input type="submit" value="send message" /> 
 </form>
+<div class="CsRightLink"><a href="index.html">main</a></div>
+<br />
 <hr /><div class="CsCopyrightFooter"><a href="cr.html">copyright 2010</a> nicholas barnard</div>
 </div>
 <!--#include virtual="genericmodal.html" -->
