--- a/geekfaq.html
+++ b/geekfaq.html
@@ -8,24 +8,23 @@
 <div class="CsMainHeader"><img alt="Bus Logo" src="<!--#include virtual="logo-data.txt" -->" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;" />metro mobile: geek faq</div>
 <div class="CsMainBody">
 <div class="CsRightLink"><a href="index.html">main</a></div>
-<h4>What have you done to make metro mobile load fast?</h4>
+<h4>What have you done to make metro mobile load quickly?</h4>
 Most importantly metro mobile is presented to the browser is composed as a single HTML file with inline images (as data URIs), JavaScript, and CSS.  For development purposes the images, JavaScript, and CSS are separated into multiple files and are compiled into one file via server side includes.  I have done this because mobile networks have high latencies, and by presenting one single file the mobile browser can display the file with one single HTTP request, eliminating any additional HTTP roundtrip requests.
-
-<h4>What about compression of the files?</h4>
-I use several different types of compression.  The CSS and Javascript are compressed by <a href="http://developer.yahoo.com/yui/compressor/">YUI Compressor</a>.  The HTML file is compressed by <a href="http://code.google.com/p/htmlcompressor/">htmlcompressor</a>.  The graphics are compressed by <a href="http://www.punypng.com/">PunyPNG</a>.  Finally, I have used a custom script to take all global HTML, CSS, and JavaScript objects and reduce them to a two character codes.  After this is all said and done this reduces the main metro mobile page by 40% from 29.5k to 17.5k.  Additionally, if the web browser supports HTTP gzip compression the transmitted file size will be reduced to 8k resulting in a net 72% compression ratio.
 
 <h4>Doesn't inlining all the images, JavaScript, and CSS prevent the browser from downloading resources in parallel?  As a result doesn't this mean the page takes longer to load?</h4>
 Yes, inlining the resources does mean that the browser doesn't download any resources in parallel.  However, mobile networks tend to be high latency, higher bandwidth internet connections.  Round trip ping times of 200 or 300 ms are common, and 600 ms latencies are not unheard of. If you assume two additional round trips to download resources, by inlining the images, it reduces the total time to load a page on a network with 600 ms latencies from almost two seconds, to below one second. Additionally the file size increase from BASE64 encoding which is required to inline the images is mitigated by gzip compression.  The net difference of the gzipped images versus the BASE64 encoded gzipped images is 17 bytes, or less than 1% of the file size of the images.  Finally, by inlining the CSS and JavaScript the gzip compression is greater than if the files were served separately.
+
+<h4>Don't you use any compression of the files?</h4>
+I use several different types of compression.  The CSS and Javascript are compressed by <a href="http://developer.yahoo.com/yui/compressor/">YUI Compressor</a>.  The HTML file is compressed by <a href="http://code.google.com/p/htmlcompressor/">htmlcompressor</a>.  The graphics are compressed by <a href="http://www.punypng.com/">PunyPNG</a>.  Finally, I have used a custom script to take all global HTML, CSS, and JavaScript objects and reduce the object's name to two characters. After this is all said and done this reduces the main metro mobile page by 40% from 29.5k to 17.5k.  Additionally, if the web browser supports HTTP gzip compression the transmitted file size will be reduced to 8k resulting in a net 72% compression ratio.
 
 <h4>How does metro mobile determine the nearest stop?</h4>
 It obtains the nearest location using the <a href="http://dev.w3.org/geo/api/spec-source.html">HTML5 Geolocation API</a>, then uses this to obtain a list of the nearest stops via <a href="http://code.google.com/p/onebusaway/wiki/OneBusAwayRestApi">OneBusAwayAPI</a>.
 
 <h4>What development environment have you used?</h4>
-I have utilized GNU Emacs 22.3.1, Bazaar, and Safari 5.0's Web Inspector.  I've not used the <a href="http://xkcd.com/378/">C-x M-c M-butterfly command</a>, but I intend to utilize this in the version 42.42 of metro mobile.
+I have utilized <a href="http://www.gnu.org/software/emacs/">GNU Emacs 22.3.1</a>, <a href="http://bazaar.canonical.com/">Bazaar</a>, and Safari 5.0's <a href="http://developer.apple.com/library/safari/#documentation/AppleApplications/Conceptual/Safari_Developer_Guide/1Introduction/Introduction.html">Web Inspector</a>.  I've not used the <a href="http://xkcd.com/378/">C-x M-c M-butterfly command</a>, but I intend to utilize this in the version 42.42 of metro mobile.
 
 <h4>Where do I find the uncompressed version of metro mobile?</h4>
 The uncompressed version is provided at <a href="http://www.inmff.net/mm/">http://www.inmff.net/mm/</a>, additionally a version before the files have been combined via server side includes is available at <a href="http://www.inmff.net/mm/nossi">http://www.inmff.net/mm/nossi</a>.
-
 
 <h4>Where is metro mobile hosted?</h4>
 metro mobile is hosted at <a href="http://www.forest.net">digital.forest</a> in South Seattle.
