--- a/locerror.html
+++ b/locerror.html
@@ -18,7 +18,7 @@ padding:0;
 <!--#include virtual="locerror.js" -->
 </script>
 </head>
-<body onload="setTimeout('window.scroll(0,1)', 5);debugdump();">
+<body onload="fnDebugLoad();">
 <div id="idLocAttemptMain" class="CSPrefMain">
 <div class="CsMainHeader"><img alt="Bus Logo" src="<!--#include virtual="logo-data.txt" -->" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;" />metro mobile: location report</div>
 <div class="CsMainBody">
@@ -43,13 +43,13 @@ Please select the location request for which you would like to submit a location
 <input name="redirect" value="/locerrorrecev.html" type="hidden" />
 <input name="debugdata" type="hidden" />
 <input name="env_report" value="REMOTE_HOST,HTTP_USER_AGENT,REMOTE_ADDR" type="hidden" />
-If you would like to receive a response to your report please provide the following information:
+if you would like to receive a response to your report please provide the following information:
 <br/>
-<label for="name">Name:</label> <input id="name" name="realname" /><br /> 
-<label for="email">E-Mail Address:</label> <input id="email" name="email" /><br />
+<label for="name">name:</label> <input id="name" name="realname" /><br /> 
+<label for="email">e-mail:</label> <input id="email" name="email" /><br />
 <input name="subject" value="Location Error Report" type="hidden"><br />
-Please assist in providing the following information:<br />
-expected location: <input name="expectedloc" /><br />
+please provide the following information:<br />
+actual location: <input name="expectedloc" /><br />
 device type: <select name="devicetype">
 <option value="phone">phone</option>
 <option value="computer">computer</option>
