corrected speling, changed about to faq, a few other tweaks

--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
 <title>metro mobile: faq</title>
 <meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
 <style type="text/css"><!--#include virtual="common.css" --></style>
-<script><!--#include virtual="abt.js" --></script>
+<script><!--#include virtual="faq.js" --></script>
 </head><body onload="setTimeout("window.scroll(0,1)", 5);">
 <div class="CsMainHeader"><img alt="Bus Logo" src="<!--#include virtual="logo-data.txt" -->" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;" />metro mobile: faq</div>
 <div class="CsMainBody">
@@ -14,7 +14,7 @@ metro mobile is a mobile-optimized front end to <a href="http://metro.kingcounty
 <ul>
 <li>Store Locations</li>
 <li>Find location via GPS</li>
-<li>Select default trip options (e.g. If you need an accessable route, how far you're willing to walk, or if you prefer the fastest trip, the fewest transfers, or the least amount of walking.)</li>
+<li>Select default trip options (e.g. If you need an accessible route, how far you're willing to walk, or if you prefer the fastest trip, the fewest transfers, or the least amount of walking.)</li>
 </ul>
 
 <h4>Who wrote metro mobile?</h4>
@@ -42,7 +42,7 @@ By default metro mobile display a week of dates, starting with today.  If you'd 
 All data is stored on cookies on your phone or computer, and is not stored by the metro mobile website without your express consent.  If you use the GPS location abilities your current location is provided to OneBusAway and would be covered by their <a href="http://onebusaway.org/p/PrivacyPolicy.action">privacy policy</a>.
 
 <h4>metro mobile said I was somewhere where I wasn't, what happened?</h4>
-The process involved with identifying the specific location of a phone or computer on the planet is complex.  If you believe the wrong location was returned, please go to additional options and set "save location debug info" to "yes", and retry your request.  After repeating your request, please submit a <a href="locationerror.html">location error report</a>. 
+The process involved with identifying the specific location of a phone or computer on the planet is complex.  If you believe the wrong location was returned, please go to additional options and set "save location debug info" to "yes", and retry your request.  After repeating your request, please submit a <a href="locationerror.html">location error report</a>.  You can also use your device's mapping application to identify the current location to ensure that it is correct.
 
 <h4>How do I tell all my friends about metro mobile?</h4>
 There are many ways, you can email them a link to http://metromobile.info, tweet them with <a href="http://twitter.com/metro_mobile">@metro_mobile</a>, or suggest it to them on <a href="http://www.facebook.com/pages/Introducing-metro-mobile/109707232429391">Facebook</a>.  Oh, and you can also just tell them about it in person, "metro mobile dot info" its quick and easy to say!
