--- a/preferences-tripdefaults.html
+++ b/preferences-tripdefaults.html
@@ -61,7 +61,7 @@ days displayed:<br /><select name="nmNumberDays">
 <option value="W">minimal walking</option>
 </select>
 
-<br />accessable trip:<br /><select name="nmAccessablePull">
+<br />accessible trip:<br /><select name="nmAccessablePull">
 <option value="N" selected="selected">no</option>
 <option value="Y">yes</option>
 </select>
