--- a/tripplanner.html
+++ b/tripplanner.html
@@ -32,7 +32,7 @@
 <input type="checkbox" style="display: none;" value="Y" name="Atr" />
 
 
-<div style="float: left;">start:</div><div class="CsRightLink"><a href="abt.html">about</a></div><br />
+<div style="float: left;">start:</div><div class="CsRightLink"><a href="faq.html">faq</a></div><br />
 <select name="nmOriginationPull" onchange="fnLocSelect();">
 <script>
 fnFillLoc();
@@ -85,7 +85,7 @@ maximum walking:
 <option value="W">minimal walking</option>
 </select>
 
-<br />accessable trip: <select name="nmAccessablePull">
+<br />accessible trip: <select name="nmAccessablePull">
 <option value="N" selected="selected">no</option>
 <option value="Y">yes</option>
 </select>
