updated legal disclaimer to something more, uh professonal.... Sigh.

--- a/cr.html
+++ b/cr.html
@@ -20,7 +20,10 @@ metro mobile also contains the following code:<ul>
 <li><a href="http://code.google.com/p/thefriendlyplaces/source/browse/trunk/jscript/querystring.js?spec=svn7&r=7">Query string</a>, which is released under the Simplified BSD License.</li>
 <li><a href="http://javascript.internet.com/forms/numbers-only.html">Numbers Only</a>  from <a href="http://javascript.internet.com">The JavaScript Source</a> created by <a href="http://www.idocs.com">Idocs</a>.</li>
 </ul>
-   
+By using metro mobile you agree to the following terms:<br />(the son of a lawyer made me put this in)<ul>
+<li>metro mobile is provided by Nicholas Barnard without any warranties or guarantees.</li>
+<li>Nicholas Barnard does not guarantee the accuracy of results provided by metro mobile. He assumes no liability for any damages or loss of any kind that might arise from the use of, misuse of, or the inability to use metro mobile.</li>
+<li>Nicholas Barnard is not responsible for missed trips or any damages that result from the use of metro mobile.</li></ul>
 <hr /><div class="CsCopyrightFooter"><a href="cr.html">copyright 2010</a> nicholas barnard</div>
 </div>
 </body>
