fixed loading code so it won't reset options if you've already set them and just pressed back

--- a/tripplanner.html
+++ b/tripplanner.html
@@ -49,16 +49,19 @@ fnFillLoc();
 <strong>or</strong> enter an ending address: <br /><input name="nmDestinationCustomText" size="25" maxlength="80" /><br />
 
 <select name="Arr">
+<option selected="Selected"></option>
 <option value="A">arrive</option>
 <option value="D" selected="selected">depart</option>
 </select><br />
 <select name="nmDayPull">
-<option value="t" selected="selected">today</option>
+<option selected="Selected"></option>
+<option value="t">today</option>
 <option value="m">tomorrow</option>
 <script>
 fnFillDay();
 </script>
 </select><select name="nmTimePull">
+<option selected="Selected"></option>
 <script>
 fnFillTime();
 </script>
