corrected bug in previous revision... Javascript is case sensitive

--- a/tripplanner.html
+++ b/tripplanner.html
@@ -51,7 +51,7 @@ fnFillLoc();
 <select name="Arr">
 <option selected="Selected"></option>
 <option value="A">arrive</option>
-<option value="D" selected="selected">depart</option>
+<option value="D">depart</option>
 </select><br />
 <select name="nmDayPull">
 <option selected="Selected"></option>
